--- a/index.html
+++ b/index.html
@@ -16,7 +16,119 @@
 <!-- visible content goes here -->
 
 
-<h1>dig245-a4</h1>
+<div class="whitsimage">
+</div>
+
+<div class= "usabilty">
+  <h1> Usability Test Results </h1>
+</div>
+
+<div class= "sydney">
+  <p> By Sydney McKenna </p>
+</div>
+<div class="row"> </div>
+<div class="row"> </div>
+
+
+<div class="container">
+<div class="row">
+<div class="d-flex justify-content-center">
+<div class="col-md-5 ">
+<h3>Project Overview</h3>
+This project is designed to help determine Whit's Frozen Custard's usability on their website.  Below are the results of the test.
+    </div>
+<div class="col-md-5 ">
+<h3>Conclusion </h3>
+Whit's Custard has a very clean and easily navigable site for anyone to stay engaged and easily order!
+        </div>
+      <div class="row"></div>
+      </div>
+      </div>
+    </div>
+<div class="row"></div>
+<div class="row"></div>
+
+<div class="container">
+<div class="row">
+<div class="d-flex justify-content-center">
+<div class="col-md-1 col-sm-4 col-xs-10">
+01
+    </div>
+<div class="col-md-7 col-sm-9 col-xs-15">
+<h3>Finding Flavors of the Week </h3>
+Thatcher was able to use previous website knowledge to quickly determine where on the home screen the drop-down menu was. <br>
+Time: 0:12
+        </div>
+      </div>
+      </div>
+    </div>
+
+<div class="container">
+<div class= "row">
+<div class="d-flex justify-content-center">
+<div class="col-md-1 col-sm-4 col-xs-10" >
+  02
+      </div>
+<div class="col-md-7 col-sm-9 col-xs-15 ">
+  <h3>Gluten Free Options</h3>
+Based on studying down from task 1, Thatcher was able to use context clues in finding the Gluten Free opstions quickly. <br>
+Time: 0:09
+        </div>
+      </div>
+      </div>
+    </div>
+
+<div class="container">
+<div class= "row">
+<div class="d-flex justify-content-center">
+<div class="col-md-1 col-sm-4 col-xs-10">
+  03
+      </div>
+<div class="col-md-7 col-sm-9 col-xs-15">
+  <h3>Whit's Custard To-Go</h3>
+The To-Go option is a quick scroll down to the bottom of the page, however Thatcher was able to find a shortcut on the page he was viewing, allowing him to find it quicker. <br>
+Time: 0:30
+        </div>
+      </div>
+      </div>
+    </div>
+
+<div class="container">
+<div class= "row">
+<div class="d-flex justify-content-center">
+<div class="col-md-1 col-sm-4 col-xs-10 ">
+  04
+      </div>
+<div class="col-md-7 col-sm-9 col-xs-15 ">
+<h3>Mt. Airy Whit's</h3>
+Thatcher was unsure of where to go for this, as he wasn't sure if this type of drop down would be on the home page.  He eventually found it after searching the whole website! <br>
+Time: 1:30
+        </div>
+      </div>
+      </div>
+    </div>
+
+<div class="container">
+<div class= "row">
+<div class="d-flex justify-content-center">
+<div class="col-md-1 col-sm-4 col-xs-10">
+  05
+      </div>
+<div class="col-md-7 col-sm-9 col-xs-15">
+  <h3>Whit's Twitter Handle</h3>
+This was one of the quicker finds due to his past experiences with wanting to find social media handles on websites. <br>
+Time: 0:11
+        </div>
+      </div>
+      </div>
+    </div>
+<div class="row"></div>
+<div class="row"></div>
+
+
+<div class= "conduct">
+  <p> Conducted by Sydney McKenna, Hope Carpenter, Thatcher Craig </p>
+</div>
 
 
 
