--- a/index.html
+++ b/index.html
@@ -20,15 +20,17 @@
 </div>
 
 <div class= "usabilty">
-  <h1> Usability Test Results </h1>
+  <h1> <a href="https://whitscustard.com/">Whit's </a> Usability Test Results </h1>
 </div>
 
 <div class= "sydney">
   <p> By Sydney McKenna </p>
 </div>
 <div class="row"> </div>
-<div class="row"> </div>
 
+<div class= "img">
+  <img src="./whits.jpg" alt="index.html" width="550" height="300" > </div>
+<div class="row"> </div>
 
 <div class="container">
 <div class="row">
@@ -56,12 +58,16 @@ Whit's Custard has a very clean and easily navigable site for anyone to stay eng
     </div>
 <div class="col-md-7 col-sm-9 col-xs-15">
 <h3>Finding Flavors of the Week </h3>
-Thatcher was able to use previous website knowledge to quickly determine where on the home screen the drop-down menu was. <br>
+Thatcher was confidently able to use previous website knowledge to quickly determine where on the home screen the drop-down menu was. <br>
 Time: 0:12
         </div>
       </div>
       </div>
     </div>
+
+<div class= "img">
+  <img src="./flavor.jpg" alt="index.html" width="550" height="300" > </div>
+<div class="row"> </div>
 
 <div class="container">
 <div class= "row">
@@ -78,6 +84,10 @@ Time: 0:09
       </div>
     </div>
 
+<div class= "img">
+  <img src="./gluten.jpg" alt="index.html" width="550" height="300" > </div>
+<div class="row"> </div>
+
 <div class="container">
 <div class= "row">
 <div class="d-flex justify-content-center">
@@ -86,12 +96,16 @@ Time: 0:09
       </div>
 <div class="col-md-7 col-sm-9 col-xs-15">
   <h3>Whit's Custard To-Go</h3>
-The To-Go option is a quick scroll down to the bottom of the page, however Thatcher was able to find a shortcut on the page he was viewing, allowing him to find it quicker. <br>
+The To-Go option is a quick scroll down to the bottom of the page, however Thatcher was quickly able to find a shortcut on the page he was viewing, allowing him to find it quicker. <br>
 Time: 0:30
         </div>
       </div>
       </div>
     </div>
+
+<div class= "img">
+  <img src="./togo.jpg" alt="index.html" width="550" height="300" > </div>
+<div class="row"> </div>
 
 <div class="container">
 <div class= "row">
@@ -101,12 +115,15 @@ Time: 0:30
       </div>
 <div class="col-md-7 col-sm-9 col-xs-15 ">
 <h3>Mt. Airy Whit's</h3>
-Thatcher was unsure of where to go for this, as he wasn't sure if this type of drop down would be on the home page.  He eventually found it after searching the whole website! <br>
+Thatcher was unsure and frustrated of where to go for this task, as he wasn't sure if this type of drop down would be on the home page.  He eventually found it after searching the whole website! <br>
 Time: 1:30
         </div>
       </div>
       </div>
     </div>
+<div class= "img">
+  <img src="./mtairy.jpg" alt="index.html" width="550" height="300" > </div>
+<div class="row"> </div>
 
 <div class="container">
 <div class= "row">
@@ -116,15 +133,16 @@ Time: 1:30
       </div>
 <div class="col-md-7 col-sm-9 col-xs-15">
   <h3>Whit's Twitter Handle</h3>
-This was one of the quicker finds due to his past experiences with wanting to find social media handles on websites. <br>
+This was one of the quicker and more confident finds due to his past experiences with wanting to find social media handles on websites. <br>
 Time: 0:11
         </div>
       </div>
       </div>
     </div>
-<div class="row"></div>
-<div class="row"></div>
 
+<div class= "img">
+  <img src="./twitter.jpg" alt="index.html" width="550" height="300" > </div>
+<div class="row"> </div>
 
 <div class= "conduct">
   <p> Conducted by Sydney McKenna, Hope Carpenter, Thatcher Craig </p>
