--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ Time: 0:12
       </div>
 <div class="col-md-7 col-sm-9 col-xs-15 ">
   <h3>Gluten Free Options</h3>
-Based on studying down from task 1, Thatcher was able to use context clues in finding the Gluten Free opstions quickly. <br>
+Based on studying down from task 1, Thatcher was able to use context clues in finding the Gluten Free options quickly. <br>
 Time: 0:09
         </div>
       </div>
