--- a/index.html
+++ b/index.html
@@ -15,15 +15,18 @@
 <body>
 <!-- visible content goes here -->
 
+<body>
+<!-- visible content goes here -->
+
 
 <div class="whitsimage">
 </div>
 
-<div class= "usabilty">
+<div class="usabilty">
   <h1> <a href="https://whitscustard.com/">Whit's </a> Usability Test Results </h1>
 </div>
 
-<div class= "sydney">
+<div class="sydney">
   <p> By Sydney McKenna </p>
 </div>
 <div class="row"> </div>
@@ -39,111 +42,109 @@ This project is designed to help determine Whit's Frozen Custard's usability on 
 <h3>Conclusion </h3>
 Whit's Custard has a very clean and easily navigable site for anyone to stay engaged and easily order!
         </div>
-      <div class="row"></div>
+
       </div>
       </div>
     </div>
-<div class="row"></div>
+
 <div class="row"></div>
 
 <div class="container">
 <div class="row">
 <div class="d-flex justify-content-center">
-<div class="col-md-1 col-sm-4 col-xs-10">
+<div class="col-md-4 col-sm-4 col-4 text-right ">
 01
     </div>
-<div class="col-md-7 col-sm-9 col-xs-15">
+<div class="col-md-7 col-sm-9 col-15">
 <h3>Finding Flavors of the Week </h3>
-Thatcher was confidently able to use previous website knowledge to quickly determine where on the home screen the drop-down menu was. <br>
-Time: 0:12
+Thatcher was confidently able to use previous website knowledge to quickly determine where on the home screen the drop-down menu was. <br><p style="color:#434da1;">Time: 0:12 </p>
+
         </div>
       </div>
       </div>
     </div>
 
-<div class= "img">
-  <img src="./flavor.jpg" alt="index.html" width="550" height="300" > </div>
+<img src="./flavor.jpg" class="img-fluid rounded mx-auto d-block" alt="index.html" width="550" height="300">
 <div class="row"> </div>
 
 <div class="container">
-<div class= "row">
+<div class="row">
 <div class="d-flex justify-content-center">
-<div class="col-md-1 col-sm-4 col-xs-10" >
+<div class="col-md-4 col-sm-4 col-4 text-right">
   02
       </div>
 <div class="col-md-7 col-sm-9 col-xs-15 ">
   <h3>Gluten Free Options</h3>
-Based on studying down from task 1, Thatcher was able to use context clues in finding the Gluten Free options quickly. <br>
-Time: 0:09
-        </div>
+Based on studying down from task 1, Thatcher was able to use context clues in finding the Gluten Free options quickly. <br><p style="color:#434da1;"> Time: 0:09 </p>       </div>
       </div>
       </div>
     </div>
 
-<div class= "img">
-  <img src="./gluten.jpg" alt="index.html" width="550" height="300" > </div>
+  <img src="./gluten.jpg" class="img-fluid rounded mx-auto d-block" alt="index.html" width="550" height="300">
 <div class="row"> </div>
 
 <div class="container">
-<div class= "row">
+<div class="row">
 <div class="d-flex justify-content-center">
-<div class="col-md-1 col-sm-4 col-xs-10">
+<div class="col-md-4 col-sm-4 col-4 text-right">
   03
       </div>
-<div class="col-md-7 col-sm-9 col-xs-15">
+<div class="col-md-7 col-sm-9 col-15">
   <h3>Whit's Custard To-Go</h3>
-The To-Go option is a quick scroll down to the bottom of the page, however Thatcher was quickly able to find a shortcut on the page he was viewing, allowing him to find it quicker. <br>
-Time: 0:30
+The To-Go option is a quick scroll down to the bottom of the page, however Thatcher was quickly able to find a shortcut on the page he was viewing, allowing him to find it quicker. <br><p style="color:#434da1;"> Time: 0:30 </p>
         </div>
       </div>
       </div>
     </div>
 
-<div class= "img">
-  <img src="./togo.jpg" alt="index.html" width="550" height="300" > </div>
+ <img src="./togo.jpg" class="img-fluid rounded mx-auto d-block" alt="index.html" width="550" height="300">
 <div class="row"> </div>
 
 <div class="container">
-<div class= "row">
+<div class="row">
 <div class="d-flex justify-content-center">
-<div class="col-md-1 col-sm-4 col-xs-10 ">
+<div class="col-md-4 col-sm-4 col-4 text-right">
   04
       </div>
-<div class="col-md-7 col-sm-9 col-xs-15 ">
+<div class="col-md-7 col-sm-9 col-15 ">
 <h3>Mt. Airy Whit's</h3>
-Thatcher was unsure and frustrated of where to go for this task, as he wasn't sure if this type of drop down would be on the home page.  He eventually found it after searching the whole website! <br>
-Time: 1:30
+Thatcher was unsure and frustrated of where to go for this task, as he wasn't sure if this type of drop down would be on the home page.  He eventually found it after searching the whole website! <br><p style="color:#434da1;"> Time: 1:30 </p>
         </div>
       </div>
       </div>
     </div>
-<div class= "img">
-  <img src="./mtairy.jpg" alt="index.html" width="550" height="300" > </div>
+ <img src="./mtairy.jpg" class="img-fluid rounded mx-auto d-block" alt="index.html" width="550" height="300">
 <div class="row"> </div>
 
 <div class="container">
-<div class= "row">
+<div class="row">
 <div class="d-flex justify-content-center">
-<div class="col-md-1 col-sm-4 col-xs-10">
+<div class="col-md-4 col-sm-4 col-4 text-right">
   05
       </div>
-<div class="col-md-7 col-sm-9 col-xs-15">
+<div class="col-md-7 col-sm-9 col-15">
   <h3>Whit's Twitter Handle</h3>
-This was one of the quicker and more confident finds due to his past experiences with wanting to find social media handles on websites. <br>
-Time: 0:11
-        </div>
+This was one of the quicker and more confident finds due to his past experiences with wanting to find social media handles on websites. <br><p style="color:#434da1;"> Time: 0:11 </p></div>
       </div>
       </div>
     </div>
 
-<div class= "img">
-  <img src="./twitter.jpg" alt="index.html" width="550" height="300" > </div>
+<img src="./twitter.jpg" class="img-fluid rounded mx-auto d-block" alt="index.html" width="550" height="300">
 <div class="row"> </div>
 
-<div class= "conduct">
+<div class="conduct">
   <p> Conducted by Sydney McKenna, Hope Carpenter, Thatcher Craig </p>
 </div>
 
+
+
+<!-- links to javascripts -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+
+
+</body>
 
 
 <!-- links to javascripts -->
